[package]
name = "todo-actix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.12.0"
actix-web = "3.3.3"
actix-rt = "1.1.1"
serde = "1.0.132"
dotenv = "0.15.0"
config = "0.11.0"
tokio-pg-mapper = "0.1.4"
tokio-pg-mapper-derive = "0.1.4"
deadpool-postgres = "0.5.0"
tokio-postgres = "0.5.1"